Prevent collapsed spacing in show notes

--- a/app/assets/stylesheets/application.css
+++ b/app/assets/stylesheets/application.css
@@ -18,15 +18,7 @@
   visibility: hidden;
 }
 
-.prose p br + br,
-.prose p + br,
-.prose li br + br,
 .prose p br:only-child,
 .prose p:empty {
   display: none
-}
-
-.prose p br,
-.prose li br {
-  display: block;
 }
